# scouting-project

./: .gitignore  DEVELOPMENT_PLAN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
Data-ETL-Pipeline/: .env.example  API_FOOTBALL_GUIDE.md  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT_PLAN.md  Football scouting data pipline chat.md  ISSUES.md  QUICK_START.md  check_seasons.py  cli.py  collect_premier_league.py  debug_players.py  docker-compose.yml  football_etl_plan (1).md  generate_sample_data.py  requirements.txt  run_scheduler.py  smart_collector.py  test_direct_api.py  verify_data.py
Data-ETL-Pipeline/config/: settings.py
Data-ETL-Pipeline/database/: batch_loader.py  connection.py  migration_001_api_football_ids.sql  migration_002_fotmob_and_leagues.sql  migration_003_advanced_stats.sql  schema.sql  schema_api_football.sql  schema_match_events.sql
Data-ETL-Pipeline/docs/: DATA_DEPTH_ANALYSIS.md  NEXT_STEPS.md  PRD_FOOTBALL_DATA_PLATFORM.md
Data-ETL-Pipeline/etl/: api_football_etl.py  fotmob_etl.py  statsbomb_advanced_etl.py  statsbomb_etl.py  understat_etl.py
Data-ETL-Pipeline/scheduler/: __init__.py  job_scheduler.py  jobs.py
Data-ETL-Pipeline/scrapers/api_football/: __init__.py  client.py
Data-ETL-Pipeline/scrapers/fotmob/: __init__.py  client.py  constants.py  data_parser.py
Data-ETL-Pipeline/scrapers/statsbomb/: client.py
Data-ETL-Pipeline/scrapers/understat/: __init__.py  client.py
Data-ETL-Pipeline/server/: app.py
Data-ETL-Pipeline/server/templates/: index.html  layout.html  match_detail.html  matches.html  player_detail.html  players.html  team_detail.html  teams.html
Data-ETL-Pipeline/utils/: __init__.py  api_tracker.py  deduplication.py  logging_config.py  monitoring.py  retry.py  season_utils.py  validators.py
docs/: IMPLEMENTATION_REFERENCE.md  PROJECT_INITIAL_PLAN.md
src/: .env.example  README.md  __init__.py  app.py  pyproject.toml  requirements.txt  setup.py
src/config/: metrics_registry.yaml  settings.yaml
src/services/: __init__.py  llm_service.py  metrics_service.py  role_service.py  similarity_service.py
src/tests/: __init__.py  conftest.py  test_invariants.py  test_llm_service.py  test_metrics_service.py  test_similarity_service.py
src/utils/: __init__.py  db.py  validation.py
src/visualization/: __init__.py  heatmaps.py  radar.py  scatter.py  tables.py
